<resources>
    <string name="app_name">Incoming Call</string>
    <string name="avatar_image">avatarImage</string>
    <string name="incoming_call">Intercom Call</string>
    <string name="decline">Decline</string>
    <string name="visitor_image">visitorImage</string>
    <string name="answer">Answer</string>
    <string name="smart_home_video">Smart Home Video…</string>
    <string name="smart_home">Smart Home</string>
    <string name="swipe_down_to_decline">Swipe down to decline</string>
    <string name="swipe_up_to_answer">Swipe up to answer</string>
    <string name="accept">Accept</string>
</resources>
