<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="2dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.85"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/smart_home"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/callType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                <Button
                    android:id="@+id/btnDecline"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/decline_button_background"
                    android:stateListAnimator="@null"
                    android:text="@string/decline"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnAnswer"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/accept_button_background"
                    android:stateListAnimator="@null"
                    android:text="@string/answer"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDecline"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/decline_button"
                android:stateListAnimator="@null"
                android:text="@string/decline"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnAnswer"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/accept_button"
                android:stateListAnimator="@null"
                android:text="@string/answer"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
